--- a/roles/rails/templates/database.yml
+++ b/roles/rails/templates/database.yml
@@ -3,9 +3,9 @@ default: &default
   encoding: unicode
   host: localhost
   pool: 5
-  username: {{ deploy_user}}
-  password: {{ deploy_user }}
+  username: {{ database_user}}
+  password: {{ database_password }}
 
 {{ env }}:
   <<: *default
-  database: consul_{{ env }}
+  database: {{ database_name }}
